# python-learning

packet/: pyproject.toml
packet/src/mypkg/: __init__.py  cli.py  core.py
packet/src/mypkg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
parser CSV - JSON/: input.csv  main.py  output.json  parser.py
python syntax and 20 ex/: exercises_uk.py  syntax.py
week 4/Exceptions/: basic.py  else_finally.py  good_and_bad_examples.py  practice.py  practice_code2.py  raise.py  when_to_catch.py
week 4/Exceptions/files/: text.txt
week 4/Exceptions/localize_try/: bad_exapmle.py  good_example.py
week 4/working with files/: big_binary_files.py  file.txt  practice1.py  read_middle_and_big_files.py  read_small_files.py  write_atomaric.py  write_exclusive.py  write_normal.py
week 4/working with files/JSON and CSV/: csv_file.py  json_file.py  ndjson_file.py
week 4/working with files/JSON and CSV/media/: file.csv  file.json  file.ndjson
week 4/working with files/media/: file_write.txt
